trying to stop search button cut off

--- a/scss/base/_sils.scss
+++ b/scss/base/_sils.scss
@@ -56,6 +56,7 @@
     @include prefix-postfix-base();
     @include postfix();
     @include button;
+    width: 45px;
     margin-bottom: 1em;
     margin-top: 1em;
     line-height: 0.5 !important;
@@ -124,7 +125,6 @@
  //   @include dropdown-container();
   //  li { @include dropdown-style; }
 //}
-
 
 
 .tt-suggestion {
